--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>React Transform Boilerplate</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <style>
+      html,body{
+        margin:0;
+        padding:0
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
