--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Transform Boilerplate</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
@@ -15,6 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./build/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
