--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>React Transform Boilerplate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
       html,body{
@@ -12,6 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/dist/bundle.js"></script>
+    <script src="./build/bundle.js"></script>
   </body>
 </html>
